website-stack/lucinda-art-gallery/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lucinda-art-gallery-ingress
  namespace: website-stack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod  # Specify your ClusterIssuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Automatically redirect HTTP to HTTPS
spec:
  rules:
    - host: lucinda.jtmb.cc  # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lucinda-art-gallery-service
                port:
                  number: 80
    - host: lucinda.rancher-dev.branconet.lan  # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lucinda-art-gallery-service
                port:
                  number: 80
  tls:
    - hosts:
        - lucinda.jtmb.cc  # Replace with your domain
      secretName: lucinda-art-gallery-tls  # This is the name of the TLS certificate secret
